--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="logo.png" alt="Big Logo" class="hero-logo">
             <div class="hero-btns">
                 <a href="#services" class="btn btn-lime">Szolgáltatások</a>
-                <a href="#about" class="btn btn-outline">Rólunk</a>
+                <a href="#webshop.html" class="btn btn-outline">WEBSHOP</a>
             </div>
         </div>
     </section>
@@ -143,12 +143,17 @@
         </div>
     </section>
 
-    <footer>
-        <div class="footer-content">
-            <img src="logo.png" alt="ShineCars" class="footer-logo">
-            <p>© 2024 ShineCars Autókozmetika. Minden jog fenntartva.</p>
+   <footer>
+    <div class="footer-container">
+        <img src="logo.png" alt="ShineCars Logo" class="footer-logo">
+        <div class="social-links">
+            <a href="https://facebook.com/profilod" target="_blank" class="social-btn facebook">Facebook</a>
+            <a href="https://instagram.com/profilod" target="_blank" class="social-btn instagram">Instagram</a>
+            <a href="https://tiktok.com/@profilod" target="_blank" class="social-btn tiktok">TikTok</a>
         </div>
-    </footer>
+        <p class="copyright">© 2024 ShineCars Autókozmetika. Minden jog fenntartva.</p>
+    </div>
+</footer>
 
 </body>
 </html>
