--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ShineCars - Ha nem mindegy, hogy milyen lesz!!!</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
             <div class="logo-box">
                 <a href="#home"><img src="logo.png" alt="ShineCars Logo"></a>
             </div>
-            <nav>
+            <nav class="main-nav">
                 <ul>
                     <li><a href="#about">RÓLUNK</a></li>
                     <li><a href="#services">SZOLGÁLTATÁSOK</a></li>
@@ -32,7 +32,10 @@
             <img src="logo.png" alt="Big Logo" class="hero-logo">
             <div class="hero-btns">
                 <a href="#services" class="btn btn-lime">Szolgáltatások</a>
-                <a href="#webshop.html" class="btn btn-outline">WEBSHOP</a>
+                <a href="webshop.html" class="btn btn-outline">WEBSHOP</a>
+                
+                <a href="#about" class="btn btn-outline mobile-nav-btn">RÓLUNK</a>
+                <a href="#contact" class="btn btn-outline mobile-nav-btn">KAPCSOLAT</a>
             </div>
         </div>
     </section>
@@ -119,7 +122,7 @@
                         <div><h4>Telefon</h4><p><a href="tel:+36301234567" class="phone-link">+36 30 123 4567</a></p></div>
                     </div>
                     <div class="map-box">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1121.5807377831027!2d18.022620389518192!3d47.07847728162907!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4769912ab83bc16b%3A0xbed595ddbaf55fb4!2sShine%20Cars!5e0!3m2!1shu!2shu!4v1771572481101!5m2!1shu!2shu" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2695.565863675662!2d19.040236!3d47.497912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDfCsDI5JzUyLjUiTiAxOcKwMDInMjQuOCJF!5e0!3m2!1shu!2shu!4v1625000000000!5m2!1shu!2shu" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div>
 
