--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ShineCars - Ha nem mindegy, hogy milyen lesz!!!</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap" rel="stylesheet">
 </head>
@@ -122,7 +123,7 @@
                         <div><h4>Telefon</h4><p><a href="tel:+36301234567" class="phone-link">+36 30 123 4567</a></p></div>
                     </div>
                     <div class="map-box">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2695.565863675662!2d19.040236!3d47.497912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDfCsDI5JzUyLjUiTiAxOcKwMDInMjQuOCJF!5e0!3m2!1shu!2shu!4v1625000000000!5m2!1shu!2shu" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1111!2d19.0402!3d47.4979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1shu!2shu!4v123456789" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div>
 
@@ -150,9 +151,18 @@
     <div class="footer-container">
         <img src="logo.png" alt="ShineCars Logo" class="footer-logo">
         <div class="social-links">
-            <a href="https://facebook.com/profilod" target="_blank" class="social-btn facebook">Facebook</a>
-            <a href="https://instagram.com/profilod" target="_blank" class="social-btn instagram">Instagram</a>
-            <a href="https://tiktok.com/@profilod" target="_blank" class="social-btn tiktok">TikTok</a>
+            <a href="https://facebook.com/profilod" target="_blank" class="social-item">
+                <i class="fab fa-facebook-f"></i>
+                <span>Facebook</span>
+            </a>
+            <a href="https://instagram.com/profilod" target="_blank" class="social-item">
+                <i class="fab fa-instagram"></i>
+                <span>Instagram</span>
+            </a>
+            <a href="https://tiktok.com/@profilod" target="_blank" class="social-item">
+                <i class="fab fa-tiktok"></i>
+                <span>TikTok</span>
+            </a>
         </div>
         <p class="copyright">© 2024 ShineCars Autókozmetika. Minden jog fenntartva.</p>
     </div>
