--- a/webshop.html
+++ b/webshop.html
@@ -159,6 +159,12 @@
             border-top: 1px solid #333;
             padding-top: 10px;
         }
+        /* Átmeneti rejtés - Webshop funkciók kikapcsolva */
+nav ul li a[href="webshop.html"], 
+.shop-icons, 
+.btn-shop {
+    display: none !important;
+}
     </style>
 </head>
 <body class="shop-body">
