--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
+            background-attachment: fixed;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -247,7 +248,7 @@
             border-radius: 15px;
             outline: none;
             font-size: 16px;
-            box-sizing: border-box; /* Fix: ne lógjon ki */
+            box-sizing: border-box; 
         }
         .form-group input:focus, .form-group textarea:focus { border-color: var(--lime); }
 
@@ -257,9 +258,9 @@
         .social-icons a { color: white; font-size: 24px; transition: 0.3s; }
         .social-icons a:hover { color: var(--lime); transform: translateY(-5px); }
 
-        /* --- MOBIL NÉZET FIXEK --- */
+        /* --- MOBIL NÉZET JAVÍTÁS --- */
         @media (max-width: 992px) {
-            section { padding: 80px 5%; }
+            section { padding: 60px 5% !important; }
             header { background: rgba(0,0,0,0.95); padding: 15px 0; }
             .top-nav { padding: 0 5%; flex-direction: column; gap: 15px; }
             .nav-right-side { width: 100%; flex-direction: column; gap: 10px; }
@@ -267,13 +268,24 @@
             .search-container { width: 100%; justify-content: center; }
             .search-container input { width: 100% !important; text-align: center; }
             
-            .hero { width: 100vw; background-attachment: scroll; }
-            .hero-btns { flex-direction: column; width: 100%; padding: 0 20px; }
+            /* --- KRITIKUS HERO FIX MOBILRA --- */
+            .hero { 
+                width: 100% !important; 
+                height: 100vh !important; 
+                min-height: 100vh !important;
+                background-attachment: scroll !important; /* Fixed háttér kikapcsolása mobilon a torzulás ellen */
+                background-size: cover !important;
+                background-position: center center !important;
+                padding: 0 !important;
+                margin: 0 !important;
+            }
+            .hero-btns { flex-direction: column; width: 100%; padding: 0 20px; gap: 15px; }
             .btn { width: 100%; text-align: center; margin-left: 0 !important; }
 
             .about-grid, .contact-grid { grid-template-columns: 1fr; gap: 30px; }
             .about-stats { grid-template-columns: 1fr; text-align: center; }
-            .service-item { flex-direction: column; text-align: center; gap: 15px; }
+            .service-item { flex-direction: column; text-align: center; gap: 15px; padding: 20px; }
+            .service-price { margin-left: 0; margin-top: 10px; }
             .map-wrapper { height: 300px; }
         }
     </style>
@@ -466,7 +478,6 @@
                 return;
             }
 
-            // 1. Item szűrés
             let items = document.getElementsByClassName('service-item');
             for (let i = 0; i < items.length; i++) {
                 let text = items[i].innerText.normalize("NFD").replace(/[\u0300-\u036f]/g, "").toLowerCase();
@@ -481,7 +492,6 @@
                 }
             }
 
-            // 2. Kategória és Szekció menedzselés
             document.querySelectorAll('.category-wrap').forEach(cat => {
                 let hasVisible = cat.querySelectorAll('.service-item[style*="display: flex"]').length > 0;
                 cat.style.display = hasVisible ? "block" : "none";
