--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             height: 100vh;
             width: 100%;
             max-width: 100vw;
+            padding-top: 125px; /* JAVÍTÁS: Ez tolja le a tartalmat a fix fejléc alá asztali nézetben */
             background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.8)), url('hero-car.jpg');
             background-size: cover;
             background-position: center;
@@ -271,15 +272,16 @@
             /* --- DRASZTIKUS HERO JAVÍTÁS --- */
             .hero { 
                 width: 100% !important; 
-                height: 70vh !important; /* Nem 100vh, hogy ne legyen óriási üres hely */
+                height: 70vh !important; 
                 min-height: 450px !important;
+                padding-top: 170px !important; /* JAVÍTÁS: Még több padding mobilon, mert a logó+kereső magasabb */
                 background-attachment: scroll !important; 
-                background-size: contain !important; /* A teljes képet mutatja levágás nélkül */
-                background-position: top center !important; /* A logó fent maradjon */
+                background-size: contain !important; 
+                background-position: top center !important; 
                 display: flex !important;
-                align-items: flex-end !important; /* A gombokat a kép ALÁ toljuk */
+                align-items: flex-end !important; 
                 padding-bottom: 20px !important;
-                background-color: #000; /* Fekete háttér a kép körül */
+                background-color: #000; 
             }
 
             .hero-btns { 
@@ -449,7 +451,7 @@
     <section id="contact" class="searchable-section">
         <div class="contact-grid">
             <div class="map-wrapper" data-aos="fade-right">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2735.636417772656!2d18.0436855!3d47.057317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4769911e8608e589%3A0x6b77239274945404!2zQmFsYXRvbmY8emYxLCBJcGFyaSBwYXJr!5e0!3m2!1shu!2shu!4v1710000000000!5m2!1shu!2shu"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2732.1741743621415!2d18.046554576856555!3d47.05637282572629!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476997096d077d71%3A0xc3f58a939f60443d!2sBalatonf%C5%B1zf%C5%91%2C%20Ipari%20Park!5e0!3m2!1shu!2shu!4v1709240000000!5m2!1shu!2shu"></iframe>
             </div>
             <div class="about-card" data-aos="fade-left">
                 <h2 class="section-title">Kapcsolat</h2>
