--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
     <footer>
         <div class="social-icons">
-            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100063511902918" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a>
         </div>
