--- a/index.html
+++ b/index.html
@@ -862,8 +862,8 @@
         const projektList = [
             { 
                 mappa: 'suzukiignis', 
-                cim: 'Teljes Kozmetika', 
-                alcim: 'Suzuki Ignis - Külső-belső megújulás' 
+                cim: 'Suzuki Ignis Lámpafelújítás', 
+                alcim: 'Suzuki Ignis - Lámpa felújítás gőzöléses technológiával' 
             }
         ];
 
