--- a/index.html
+++ b/index.html
@@ -862,8 +862,13 @@
         const projektList = [
             { 
                 mappa: 'suzukiignis', 
-                cim: 'Suzuki Ignis Lámpafelújítás', 
-                alcim: 'Suzuki Ignis - Lámpa felújítás gőzöléses technológiával' 
+                cim: 'Suzuki Ignis Fényszóró felújítás', 
+                alcim: 'Suzuki Ignis - Fényszóró felújítás gőzöléses technológiával' 
+            },
+            {
+                mappa: 'daewook', 
+                cim: 'Daewoo Kalos Fényszóró felújítás', 
+                alcim: 'Daewoo Kalos - Fényszóró felújítás gőzöléses technológiával' 
             }
         ];
 
