--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
     <section id="contact">
         <div class="contact-grid">
             <div class="map-wrapper" data-aos="zoom-in">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2737.5857218337!2d18.045!3d47.058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDfCsDAzJzI4LjgiTiAxOMKwMDInNDIuMCJF!5e0!3m2!1shu!2shu!4v1620000000000!5m2!1shu!2shu"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2717.047796186452!2d18.020691175749853!3d47.078526324295204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4769912ab83bc16b%3A0xbed595ddbaf55fb4!2sShine%20Cars!5e0!3m2!1shu!2shu!4v1771859710292!5m2!1shu!2shu"></iframe>
             </div>
             <div class="about-card" data-aos="fade-left">
                 <h2 class="section-title">Kapcsolat</h2>
@@ -847,8 +847,8 @@
     <footer>
         <div class="social-icons">
             <a href="https://www.facebook.com/profile.php?id=100063511902918" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a>
+            <a href="https://www.instagram.com/shinecarsbalaton/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.tiktok.com/@shinecars2019" target="_blank"><i class="fab fa-tiktok"></i></a>
         </div>
         <p class="copy-text">© 2024 SHINECARS DETAILING | BALATONFŰZFŐ</p>
     </footer>
